--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,100 +27,104 @@
 		<title>The Cryptography's Wiki</title>
 
 		<link rel="stylesheet" href="{{ asset('css/main.css') }}"> {% block style %}{% endblock %}
-		</head>
-		<body>
-			<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
-				<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
-				<nav class="my-2 my-md-0 mr-md-3">
-					{% if app.request.pathinfo != '/wiki' %}
-						<a class="p-2 text-dark" href="{{ path('wiki_home') }}">Home</a>
-					{% endif %}
+		<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+		<script type="text/javascript" id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 
-					{% if (app.user == false) and app.request.pathinfo != '/login' %}
-						<a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
-					{% endif %}
-					{% if (app.user == false) and app.request.pathinfo != '/register' %}
-						<a class="btn btn-outline-dark" href="{{ path('app_register') }}">Sign up</a>
-					{% endif %}
+	</head>
+	<body>
+		<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-4 bg-white border-bottom shadow-sm sticky-top">
+			<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
-					{% if app.user %}
-						<a class="btn btn-outline-dark" href="{{ path('app_logout') }}">Logout</a>
-					{% endif %}
-				</nav>
-			</div>
+			<nav class="my-2 my-md-0 mr-md-3">
+				{% if app.request.pathinfo != '/wiki' %}
+					<a class="p-2 text-dark" href="{{ path('wiki_home') }}">Home</a>
+				{% endif %}
 
-			{% block body %}{% endblock %}
+				{% if (app.user == false) and app.request.pathinfo != '/login' %}
+					<a class="btn btn-outline-primary" href="{{ path('app_login') }}">Sign in</a>
+				{% endif %}
+				{% if (app.user == false) and app.request.pathinfo != '/register' %}
+					<a class="btn btn-outline-dark" href="{{ path('app_register') }}">Sign up</a>
+				{% endif %}
 
-			<div class="container-sm">
-				<footer class="pt-4 mt-4 border-top">
-					<div class="row">
-						<div class="col-6 col-md">
-							<img class="mb-2" src="{{ asset('icon/dice-4-fill.svg') }}" alt="Not found" width="24" height="24">
-							<small class="d-block mb-3 text-muted">&copy; 2021</small>
-						</div>
-						<div class="col-6 col-md">
-							<h5>Features</h5>
-							<ul class="list-unstyled text-small">
-								<li>
-									<a class="text-muted" href="#">Cool stuff</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Random feature</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Team feature</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Stuff for developers</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Another one</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Last time</a>
-								</li>
-							</ul>
-						</div>
-						<div class="col-6 col-md">
-							<h5>Resources</h5>
-							<ul class="list-unstyled text-small">
-								<li>
-									<a class="text-muted" href="#">Resource</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Resource name</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Another resource</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Final resource</a>
-								</li>
-							</ul>
-						</div>
-						<div class="col-6 col-md">
-							<h5>About</h5>
-							<ul class="list-unstyled text-small">
-								<li>
-									<a class="text-muted" href="#">Team</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Locations</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Privacy</a>
-								</li>
-								<li>
-									<a class="text-muted" href="#">Terms</a>
-								</li>
-							</ul>
-						</div>
+				{% if app.user %}
+					<a class="btn btn-outline-dark" href="{{ path('app_logout') }}">Logout</a>
+				{% endif %}
+			</nav>
+		</div>
+
+		{% block body %}{% endblock %}
+
+		<div class="container-sm">
+			<footer class="pt-4 mt-4 border-top">
+				<div class="row">
+					<div class="col-6 col-md">
+						<img class="mb-2" src="{{ asset('icon/dice-4-fill.svg') }}" alt="Not found" width="24" height="24">
+						<small class="d-block mb-3 text-muted">&copy; 2021</small>
 					</div>
-				</footer>
-			</div>
-			<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
-		</body>
-	</html>
+					<div class="col-6 col-md">
+						<h5>Features</h5>
+						<ul class="list-unstyled text-small">
+							<li>
+								<a class="text-muted" href="#">Cool stuff</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Random feature</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Team feature</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Stuff for developers</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Another one</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Last time</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-6 col-md">
+						<h5>Resources</h5>
+						<ul class="list-unstyled text-small">
+							<li>
+								<a class="text-muted" href="#">Resource</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Resource name</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Another resource</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Final resource</a>
+							</li>
+						</ul>
+					</div>
+					<div class="col-6 col-md">
+						<h5>About</h5>
+						<ul class="list-unstyled text-small">
+							<li>
+								<a class="text-muted" href="#">Team</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Locations</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Privacy</a>
+							</li>
+							<li>
+								<a class="text-muted" href="#">Terms</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</footer>
+		</div>
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+	</body>
+</html>
