--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -4,87 +4,108 @@
 			<div class="card-body">
 				<h2 class="card-title text-center">{{ page.title }}</h2>
 				<p class="card-text">{{ page.introduction }}</p>
-				{% for block in blocks %}
-					{% if block.type == 'title' %}
-						<h4>
-							{{ block.content }}
-						</h4>
-					{% endif %}
-					{% if block.type == 'text' %}
-						<p>
-							{{ block.content }}
-						</p>
-					{% endif %}
-					{% if block.type == 'image' %}{% endif %}
-					{% if block.type == 'code' %}
-						<pre>
-						<code>
-							{{ block.content }}
-						</code>
-						</pre>
-					{% endif %}
-				{% endfor %}
-				<p class="text-right">
-					<a class="btn btn-primary" data-toggle="collapse" href="#title" role="button">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fonts  mt-n1" viewbox="0 0 16 16">
-							<path d="M12.258 3h-8.51l-.083 2.46h.479c.26-1.544.758-1.783 2.693-1.845l.424-.013v7.827c0 .663-.144.82-1.3.923v.52h4.082v-.52c-1.162-.103-1.306-.26-1.306-.923V3.602l.431.013c1.934.062 2.434.301 2.693 1.846h.479L12.258 3z"></path>
-						</svg>
-					</a>
-					<a class="btn btn-primary" data-toggle="collapse" href="#text" role="button">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-justify-left mt-n1" viewbox="0 0 16 16">
-							<path fill-rule="evenodd" d="M2 12.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"></path>
-						</svg>
-					</a>
-					<a class="btn btn-primary" data-toggle="collapse" href="#image" role="button">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image mt-n1" viewbox="0 0 16 16">
-							<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"></path>
-							<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"></path>
-						</svg>
-					</a>
-					<a class="btn btn-primary" data-toggle="collapse" href="#code" role="button">
-						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code mt-n1" viewbox="0 0 16 16">
-							<path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"></path>
-						</svg>
-					</a>
-				</p>
-				<div class="collapse" id="title">
-					<div class="form-group">
-						{{ form_start(title_form) }}
-						{{ form_widget(title_form.content) }}
-						<small>{{ form_help(title_form) }}</small>
-						<div class="form-error">
-							{{ form_errors(title_form) }}
+				<div class="container m-0 p-0">
+					{% for block in blocks %}
+						<div class="row">
+							{% if block.type == 'title' %}
+								<div class="col">
+									<h4>
+										{{ block.content }}
+									</h4>
+								</div>
+							{% endif %}
+							{% if block.type == 'text' %}
+								<div class="col">
+									<p>
+										{{ block.content }}
+									</p>
+								</div>
+							{% endif %}
+							{% if block.type == 'image' %}{% endif %}
+							{% if block.type == 'code' %}
+								<div class="col">
+									<pre>
+										<code>
+{{ block.content }}
+										</code>
+									</pre>
+								</div>
+							{% endif %}
+							{% if is_granted('ROLE_ADMIN') %}
+								<div class="col-auto text-right">
+									<a class="btn btn-primary btn-sm" href="{{ path('wiki_delete_block', {'id_block': block.id}) }}" role="button">
+										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+											<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
+										</svg>
+									</a>
+								</div>
+							{% endif %}
 						</div>
-						<button type="submit" class="btn btn-primary btn-sm mt-2">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(title_form) }}
-					</div>
+					{% endfor %}
 				</div>
-				<div class="collapse" id="text">
-					<div class="form-group">
-						{{ form_start(text_form) }}
-						{{ form_widget(text_form.content) }}
-						<small>{{ form_help(text_form) }}</small>
-						<div class="form-error">
-							{{ form_errors(text_form) }}
+				{% if is_granted('ROLE_ADMIN') %}
+					<p class="text-right">
+						<a class="btn btn-primary" data-toggle="collapse" href="#title" role="button">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-fonts  mt-n1" viewbox="0 0 16 16">
+								<path d="M12.258 3h-8.51l-.083 2.46h.479c.26-1.544.758-1.783 2.693-1.845l.424-.013v7.827c0 .663-.144.82-1.3.923v.52h4.082v-.52c-1.162-.103-1.306-.26-1.306-.923V3.602l.431.013c1.934.062 2.434.301 2.693 1.846h.479L12.258 3z"></path>
+							</svg>
+						</a>
+						<a class="btn btn-primary" data-toggle="collapse" href="#text" role="button">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-justify-left mt-n1" viewbox="0 0 16 16">
+								<path fill-rule="evenodd" d="M2 12.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm0-3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z"></path>
+							</svg>
+						</a>
+						<a class="btn btn-primary" data-toggle="collapse" href="#image" role="button">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-image mt-n1" viewbox="0 0 16 16">
+								<path d="M6.002 5.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0z"></path>
+								<path d="M2.002 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2h-12zm12 1a1 1 0 0 1 1 1v6.5l-3.777-1.947a.5.5 0 0 0-.577.093l-3.71 3.71-2.66-1.772a.5.5 0 0 0-.63.062L1.002 12V3a1 1 0 0 1 1-1h12z"></path>
+							</svg>
+						</a>
+						<a class="btn btn-primary" data-toggle="collapse" href="#code" role="button">
+							<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-code mt-n1" viewbox="0 0 16 16">
+								<path d="M5.854 4.854a.5.5 0 1 0-.708-.708l-3.5 3.5a.5.5 0 0 0 0 .708l3.5 3.5a.5.5 0 0 0 .708-.708L2.707 8l3.147-3.146zm4.292 0a.5.5 0 0 1 .708-.708l3.5 3.5a.5.5 0 0 1 0 .708l-3.5 3.5a.5.5 0 0 1-.708-.708L13.293 8l-3.147-3.146z"></path>
+							</svg>
+						</a>
+					</p>
+					<div class="collapse" id="title">
+						<div class="form-group">
+							{{ form_start(title_form) }}
+							{{ form_widget(title_form.content) }}
+							<small>{{ form_help(title_form) }}</small>
+							<div class="form-error">
+								{{ form_errors(title_form) }}
+							</div>
+							<button type="submit" class="btn btn-primary btn-sm mt-2">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
+									<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+								</svg>
+							</button>
+							{{ form_end(title_form) }}
 						</div>
-						<button type="submit" class="btn btn-primary btn-sm mt-2">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(text_form) }}
 					</div>
-				</div>
-				<div class="collapse" id="image">
-					Form immagine
-				</div>
-				<div class="collapse" id="code">
-					Form codice
-				</div>
+					<div class="collapse" id="text">
+						<div class="form-group">
+							{{ form_start(text_form) }}
+							{{ form_widget(text_form.content) }}
+							<small>{{ form_help(text_form) }}</small>
+							<div class="form-error">
+								{{ form_errors(text_form) }}
+							</div>
+							<button type="submit" class="btn btn-primary btn-sm mt-2">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
+									<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+								</svg>
+							</button>
+							{{ form_end(text_form) }}
+						</div>
+					</div>
+					<div class="collapse" id="image">
+						Form immagine
+					</div>
+					<div class="collapse" id="code">
+						Form codice
+					</div>
+				{% endif %}
 			</div>
 		</div>
 	</div>
