--- a/templates/main/page/comments.html.twig
+++ b/templates/main/page/comments.html.twig
@@ -1,4 +1,4 @@
-<div class="row m-3 px-lg-5 px-md-0 px-sm-5 py-3">
+<div class="row m-3 px-lg-5 px-md-0 px-sm-5 py-3 justify-content-center">
 	<div class="col-lg-6 col-md-6 col-12">
 		{% for comment in comments %}
 			<div class="row justify-content-between">
@@ -14,7 +14,7 @@
 					</div>
 				</div>
 				{% if is_granted('ROLE_ADMIN') or (comment.user == app.user) %}
-					<div class="col-auto my-1 text-right">
+					<div class="col-auto my-1  pl-0 text-right">
 						<a class="btn btn-primary btn-sm" href="{{ path('wiki_comment_delete', {'id_comment': comment.id}) }}" role="button">
 							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
 								<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
@@ -39,7 +39,7 @@
 							{{ form_errors(comment_form) }}
 						</div>
 						<button type="submit" class="btn btn-primary btn-sm mt-2">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mx-n1" viewbox="0 0 16 16">
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
 								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
 							</svg>
 						</button>
