--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -26,7 +26,9 @@
 									</p>
 								</div>
 							{% endif %}
-							{% if block.type == 'image' %}{% endif %}
+							{% if block.type == 'image' %}
+								<img src="{{ asset("/image/" ~ block.content) }}" height="160" alt="Immagine non presente" class="rounded mx-auto d-block"/>
+							{% endif %}
 							{% if block.type == 'code' %}
 								<div class="col">
 									<p>
@@ -117,7 +119,21 @@
 						</div>
 					</div>
 					<div class="collapse" id="image">
-						Form immagine
+						<div class="form-group mb-0 mt-2">
+							{{ form_start(image_form) }}
+							{{ form_widget(image_form.image, { 'attr': {'class': 'form-control-file'} })}}
+							<small>{{ form_help(image_form) }}</small>
+							<div class="form-error">
+								{{ form_errors(image_form) }}
+							</div>
+							{{ form_rest(image_form) }}
+							<button type="submit" class="btn btn-primary btn-sm mt-1">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+									<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+								</svg>
+							</button>
+							{{ form_end(text_form) }}
+						</div>
 					</div>
 					<div class="collapse" id="code">
 						<div class="form-group mb-0 mt-2">
