--- a/templates/main/page/comments.html.twig
+++ b/templates/main/page/comments.html.twig
@@ -1,7 +1,7 @@
 <div class="row m-3 px-lg-5 px-md-0 px-sm-5 py-3 justify-content-center">
-	<div class="col-lg-6 col-md-6 col-12">
+	<div class="col-md-6">
 		{% for comment in comments %}
-			<div class="row justify-content-between">
+			<div class="row">
 				<div class="col my-1">
 					<div class="card border-primary w-auto">
 						<div class="card-body text-primary">
@@ -26,7 +26,7 @@
 		{% endfor %}
 	</div>
 	{% if is_granted('ROLE_USER') %}
-		<div class="col-lg-6 col-md-6 col-12 my-1">
+		<div class="col-md-6 my-1">
 			<div class="row">
 				<div class="col text-right">
 					<div class="form-group">
