--- a/templates/main/page/content.html.twig
+++ b/templates/main/page/content.html.twig
@@ -5,12 +5,12 @@
 				<h1 class="card-title text-center display-4">{{ page.title }}</h1>
 				<div class="container m-0 p-0">
 					<div class="row justify-content-between">
-						<div class="col-9">
+						<div class="col-md-9">
 							<p class="mt-1">
 								{{ page.introduction }}
 							</p>
 						</div>
-						<div class="col-3">
+						<div class="col-md-3">
 							<div class="card bg-light">
 								<div class="card-body">
 									<h5 class="card-title">Indice</h5>
