--- a/templates/main/page/comments.html.twig
+++ b/templates/main/page/comments.html.twig
@@ -1,52 +1,41 @@
-<div class="row m-3 px-lg-5 px-md-0 px-sm-5 py-3 justify-content-center">
-	<div class="col-md-6">
-		{% for comment in comments %}
-			<div class="row">
-				<div class="col my-1">
-					<div class="card border-primary w-auto">
-						<div class="card-body text-primary">
-							<h5 class="card-title">{{ comment.user.username }}</h5>
-							<p class="card-text">{{ comment.content }}</p>
-							<p class="card-text text-right">
-								<small class="text-muted">{{ comment.insertDatetime }}</small>
-							</p>
-						</div>
-					</div>
+<div class="container mt-4">
+	<div class="card shadow">
+		<div class="card-body">
+			<h4 class="border-bottom pb-2 mb-0">Comments</h4>
+			{% for comment in comments %}
+				<div class="media border-bottom pt-3 pb-1">
+					<p class="media-body pb-1 mb-0 small">
+						<strong class="d-block text-gray-dark">@{{ comment.user.username }}</strong>
+						{{ comment.content }}
+						<small class="d-block text-muted text-right">{{ comment.insertDatetime }}</small>
+						{% if is_granted('ROLE_ADMIN') or (comment.user == app.user) %}
+							<a class="btn btn-primary btn-sm text-right" href="{{ path('wiki_comment_delete', {'id_comment': comment.id}) }}" role="button">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+									<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
+								</svg>
+							</a>
+						{% endif %}
+					</p>
 				</div>
-				{% if is_granted('ROLE_ADMIN') or (comment.user == app.user) %}
-					<div class="col-auto my-1  pl-0 text-right">
-						<a class="btn btn-primary btn-sm" href="{{ path('wiki_comment_delete', {'id_comment': comment.id}) }}" role="button">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-x mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-								<path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"></path>
-							</svg>
-						</a>
-					</div>
-				{% endif %}
-			</div>
-		{% endfor %}
-	</div>
-	{% if is_granted('ROLE_USER') %}
-		<div class="col-md-6 my-1">
-			<div class="row">
-				<div class="col text-right">
-					<div class="form-group">
-						{{ form_start(comment_form) }}
-						{{ form_widget(comment_form.content) }}
+			{% endfor %}
+			{% if is_granted('ROLE_USER') %}
+				<div class="form-group pt-3 mb-0">
+					{{ form_start(comment_form) }}
+					{{ form_widget(comment_form.content) }}
 
-						<small>{{ form_help(comment_form) }}</small>
+					<small>{{ form_help(comment_form) }}</small>
 
-						<div class="form-error">
-							{{ form_errors(comment_form) }}
-						</div>
-						<button type="submit" class="btn btn-primary btn-sm mt-2">
-							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
-								<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
-							</svg>
-						</button>
-						{{ form_end(comment_form) }}
+					<div class="form-error">
+						{{ form_errors(comment_form) }}
 					</div>
+					<button type="submit" class="btn btn-primary btn-sm mt-2">
+						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
+							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
+						</svg>
+					</button>
+					{{ form_end(comment_form) }}
 				</div>
-			</div>
+			{% endif %}
 		</div>
-	{% endif %}
+	</div>
 </div>
