--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 				<h5 class="my-0 mr-md-auto font-weight-normal">The Cryptography's Wiki</h5>
 
 				<nav class="my-2 my-md-0 mr-md-3">
-					{% if app.request.pathinfo != '/wiki' %}
+					{% if app.request.pathinfo != '/' %}
 						<a class="p-2 text-dark" href="{{ path('wiki_home') }}">Home</a>
 					{% endif %}
 
