--- a/templates/main/main.html.twig
+++ b/templates/main/main.html.twig
@@ -2,58 +2,55 @@
 
 {% block body %}
 	<div class="container-fluid">
-		<div class="row m-2">
-			<div class="col-lg-9 col-md-8 col-12">
-				<div class="row m-3">
-					<div class="col-auto">
-						<div class="jumbotron bg-white text-black border shadow-sm">
-							<h1 class="display-4 text-center">La crittografia</h1>
-							<p class="lead">La crittografia è un insieme di procedure ideate al fine di nascondere il significato di un messaggio.</p>
-							<p class="lead">Essa ha 2 parti essenziali: un algoritmo di cifratura ed una chiave.</p>
-							<hr class="my-4 text-white">
-							something
-						</div>
-					</div>
+		<div class="row m-3">
+			<div class="col">
+				<div class="jumbotron bg-white text-black border shadow-sm">
+					<h1 class="display-4 text-center">La crittografia</h1>
+					<p class="lead">La crittografia è un insieme di procedure ideate al fine di nascondere il significato di un messaggio.</p>
+					<p class="lead">Essa ha 2 parti essenziali: un algoritmo di cifratura ed una chiave.</p>
+					<hr class="my-4 text-white">
+					something
 				</div>
-				<div class="row m-3">
-					<div class="col-7">
-						<div class="card shadow-sm">
-							<div class="card-body">
-								<h5 class="card-title">Special title treatment</h5>
-								<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-								<a href="#" class="btn btn-primary">Go somewhere</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-5">
-						<div class="card shadow-sm">
-							<div class="card-body">
-								<blockquote class="blockquote mb-0">
-									<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
-									<footer class="blockquote-footer">Auguste Kerckhoffs
-									</footer>
-								</blockquote>
-							</div>
-						</div>
+			</div>
+		</div>
+		<div class="row m-3">
+			<div class="col-7">
+				<div class="card shadow-sm">
+					<div class="card-body">
+						<h5 class="card-title">Special title treatment</h5>
+						<p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+						<a href="#" class="btn btn-primary">Go somewhere</a>
 					</div>
 				</div>
 			</div>
-			<div class="col-lg-3 col-md-4 col-6">
-				<div class="row m-3">
-					<div class="col">
-						<div class="card bg-light">
-							<div class="card-body">
-								<h5 class="card-title">Pagine</h5>
-								{% for page in pages %}
-									<p class="m-0">
-										<a class="text-dark" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
-									</p>
-								{% endfor %}
-							</div>
-						</div>
+			<div class="col-5">
+				<div class="card shadow-sm">
+					<div class="card-body">
+						<blockquote class="blockquote mb-0">
+							<p>"Un sistema crittografico dovrebbe essere protetto anche se tutto ciò che riguarda il sistema, tranne la chiave, è di dominio pubblico".</p>
+							<footer class="blockquote-footer">Auguste Kerckhoffs
+							</footer>
+						</blockquote>
 					</div>
 				</div>
-				{% if is_granted('ROLE_USER') %}
+			</div>
+		</div>
+		<div class="row m-3">
+			{% for part in pages %}
+				<div class="col px-1">
+					{% for page in part %}
+						<div class="card rounded-lg my-2">
+							<div class="card-body">
+								<a class="text-dark" href="{{ path('wiki_page', {'id': page.id}) }}">{{ page.title }}</a>
+							</div>
+						</div>
+					{% endfor %}
+				</div>
+			{% endfor %}
+		</div>
+		<div class="row m-3">
+			<div class="col p-0">
+				{% if is_granted('ROLE_ADMIN') %}
 					{{ form_start(page_form) }}
 					<div class="form-row">
 						<div class="form-group mb-0 mt-2 col">
@@ -64,15 +61,15 @@
 							{{ form_errors(page_form) }}
 						</div>
 					</div>
-					<button type="submit" class="btn btn-primary btn-sm mt-1">
+					<button type="submit" class="btn btn-primary btn-sm  btn-block mt-1">
 						<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check mt-n2 mx-n1 mb-n1" viewbox="0 0 16 16">
 							<path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"></path>
 						</svg>
 					</button>
 					{{ form_rest(page_form) }}
 					{{ form_end(page_form) }}
-				</div>
-			{% endif %}
+				{% endif %}
+			</div>
 		</div>
 	</div>
 {% endblock %}
